First zoom is on point, but the rest isn't, but i've made progress in a while

--- a/style/style.css
+++ b/style/style.css
@@ -3,9 +3,11 @@
 body {
     margin: 0;
     overflow: hidden;
+    width: 2576px;
 }
 
 #wrapper {
+    position: fixed;
     display: grid;
     grid-template-columns: repeat(64, 1fr);
     width: 2576px;
