--- a/style/style.css
+++ b/style/style.css
@@ -1,7 +1,74 @@
+@import url('https://fonts.cdnfonts.com/css/minecraftia');
+
 body {
     margin: 0;
     overflow: hidden;
     width: 2576px;
+}
+
+#welcome {
+    position: fixed;
+    z-index: 1;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0,0,0,0.85);
+    /*padding-top: 20.729166666%;*/
+    
+}
+
+#welcome span{
+    z-index: 1;
+    position: relative;
+    color: #fff;
+    display: block;
+    text-align: center;
+    font-family: 'Minecraftia', sans-serif;
+    margin-bottom: 25px;
+}
+
+#welcome .confirm {
+    display: block;
+    width: 450px;
+    margin: 0 auto;
+}
+
+#welcome .confirm button {
+    margin: 0 auto;
+    display: block;
+    background-image: url(../img/button/button.png);
+    width: 280px;
+    height: 58px;
+    border: 0;
+    background-repeat: no-repeat;
+    background-size: contain;
+    font-family: 'Minecraftia', sans-serif;
+    color: #fff;
+}
+
+#welcome .confirm button:hover {
+    margin: 0 auto;
+    display: block;
+    background-image: url(../img/button/button_hover.png);
+    width: 280px;
+    height: 58px;
+    border: 0;
+    background-repeat: no-repeat;
+    background-size: contain;
+    font-family: 'Minecraftia', sans-serif;
+    color: #fff;
+}
+
+#welcome .confirm button:active {
+    margin: 0 auto;
+    display: block;
+    background-image: url(../img/button/button_click.png);
+    width: 280px;
+    height: 58px;
+    border: 0;
+    background-repeat: no-repeat;
+    background-size: contain;
+    font-family: 'Minecraftia', sans-serif;
+    color: #fff;
 }
 
 #wrapper {
