Added proper background scene

--- a/style/style.css
+++ b/style/style.css
@@ -84,12 +84,28 @@ body {
 
 #wrapper div {
     box-sizing: border-box;
-    border: solid 1px #000;
+    /*border: solid 1px #000;*/
     width: 100%;
     height: 100%;
     aspect-ratio: 1;
 }
 
 .cellBlock:hover {
-    background-color: darkgray;
+    filter: brightness(0.5);
+}
+
+/* Background css */
+
+.skyBlock {
+    background: #75b4ff;
+}
+
+.grassBlock {
+    background: url(https://www.filterforge.com/filters/11635.jpg);
+    background-size: contain;
+}
+
+.dirtBlock {
+    background: url(https://www.filterforge.com/filters/11635-v2.jpg);
+    background-size: contain;
 }
